tooling/nargo_cli/tests/snapshots/execution_success/regression_8236/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - b (witnesses {w3,..,w3})
Dead witnesses found in circuit
